Fix button spacing on mobile

--- a/app/assets/stylesheets/external.css.scss
+++ b/app/assets/stylesheets/external.css.scss
@@ -40,7 +40,7 @@
         .button {
           background-color: $white;
           color: $blue;
-          margin: 0 20px;
+          margin: 0 20px 5px 20px;
 
           &:hover {
 
